Updated xsd checker to try getting the xsd from the server before using the one in the jar. Corrected dragging from the local corpus root node. Added catch around potential tree sort issue. Prevented dragging a tree node into itself. Added the mime type as a field for local files. Added a warning when a mime type is not found in a relevant controlled vocabulary while adding resources. Corrected error loading imdi sub nodes into a table at start up. Added the exif tags as fields in a loose image file nodes. Corrected error displaying the drop down for a controlled vocabularies in a table cell when it is an open CV. Corrected issue with table cell dropdown focus and end-edit for both open and closed CVs. Updated the help format. Centralised the help window title string. Added IMDI_3_0_9.xsd from the server to the jar file.

--- a/resources/html/help/Editing_Viewing/Copy paste between tables.html
+++ b/resources/html/help/Editing_Viewing/Copy paste between tables.html
@@ -3,47 +3,12 @@
     Created on : Apr 27, 2009, 4:15:33 PM
     Author     : Peter.Withers@mpi.nl
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <STYLE TYPE="text/css">
-            <!--
-            .helpTitle
-            {
-                text-align: center;
-                font-size:125%;
-                background: #ede2cd;
-                margin:0;
-                padding:0;
-            }
-            .helpText
-            {
-                color:Black;
-                font-family:Arial,Helvetica,sans-serif;
-                font-size:100%;
-                font-size-adjust:none;
-                font-style:normal;
-                font-variant:normal;
-                font-weight:normal;
-                line-height:1.25em;
-                background: #F4F1EB;
-            }
-            -->
-        </STYLE>
-    </head>
-    <body class="helpText">
-        <table border="0" cellpadding="10" cellspacing="0">
-            <tr class="helpTitle"><td width="100%">Copy paste between tables</td><td><img src="../../../icons/arbil32x32.png">
-            </td></tr>
-            <tr><td height="100%" colspan="2" class="helpText">
-                    Copy and paste can be used to move data between tables or between IMDI files.
-                    When copying data from a table the format of the data will depend on what is selected. 
-                    If fields or rows from multiple IMDI files are selected then the data cannot be pasted into the table.
-                    It is only when fields from a single IMDI are selected that the data can be pasted into a table.
-                    The destination table cells must match the field names of the originating data, 
-                    which allows blocks of fields to be copied at the same time.
-            </td></tr>
-        </table>
-    </body>
-</html>
+Copy and paste can be used to move data between tables or between IMDI files.
+When copying data from a table the format of the data will depend on what is selected. 
+If fields or rows from multiple IMDI files are selected then the data cannot be pasted into the table.
+It is only when fields from a single IMDI are selected that the data can be pasted into a table.
+The destination table cells must match the field names of the originating data, 
+which allows blocks of fields to be copied at the same time.                    
+<!--
+This provides the ability to paste multiple fields into multiple rows simultaneously.
+-->
