--- a/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -1,114 +1,76 @@
 <!-- 
     Document   : ShortCutKeys
     Created on : Feb 17, 2009, 11:24:11 AM
-    Author     : petwit
--->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <STYLE TYPE="text/css">
-            <!--
-            .helpTitle
-            {
-                text-align: center;
-                font-size:125%;
-                background: #ede2cd;
-                margin:0;
-                padding:0;
-            }
-            .helpText
-            {
-                color:Black;
-                font-family:Arial,Helvetica,sans-serif;
-                font-size:100%;
-                font-size-adjust:none;
-                font-style:normal;
-                font-variant:normal;
-                font-weight:normal;
-                line-height:1.25em;
-                background: #F4F1EB;
-            }
-            -->
-        </STYLE>
-    </head>
-    <body class="helpText">
-        <table border="0" cellpadding="10" cellspacing="0">
-            <tr class="helpTitle"><td width="100%">Short Cut Keys</td><td><img src="../../../icons/arbil32x32.png">
-            </td></tr>
-            <tr><td height="100%" colspan="2" class="helpText">
-        <b>General short cut keys</b><br>
-        <table border="0">
-            <tbody>
-                <tr>
-                    <td>ctrl w</td>
-                    <td>Close top most window</td>
-                </tr>
-                <tr>
-                    <td>ctrl tab</td>
-                    <td>next window</td>
-                </tr>
-                <tr>
-                    <td>ctrl shift tab</td>
-                    <td>previous window</td>
-                </tr>
-                <tr>
-                    <td>enter (in the tree)</td>
-                    <td>open the current tree selection in a table</td>
-                </tr>
-                <tr>
-                    <td>ctrl p</td>
-                    <td>hide / show the selection preview</td>
-                </tr>
-                <tr>
-                    <td>ctrl enter (when initiating a table cell edit via the keyboard)</td>
-                    <td>to edit a table cell in a long field editor</td>
-                </tr>
-                <tr>
-                    <td>ctrl mouse click (when initiating a table cell edit via via the mouse)</td>
-                    <td>to edit a table cell in a long field editor</td>
-                </tr>
-                <tr>
-                    <td>delete key</td>
-                    <td>delete the selected node in the tree</td>
-                </tr>
-            </tbody>
-        </table>
-        <b>Table short cut keys</b><br>
-        <table border="0">
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-        <b>Tree short cut keys</b><br>
-        <table border="0">
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-            </td></tr>
-        </table>
-    </body>
-</html>
+    Author     : Peter.Withers@mpi.nl
+-->        
+<b>General short cut keys</b><br>
+<table border="0">
+    <tbody>
+        <tr>
+            <td>ctrl w</td>
+            <td>Close top most window</td>
+        </tr>
+        <tr>
+            <td>ctrl tab</td>
+            <td>next window</td>
+        </tr>
+        <tr>
+            <td>ctrl shift tab</td>
+            <td>previous window</td>
+        </tr>
+        <tr>
+            <td>enter (in the tree)</td>
+            <td>open the current tree selection in a table</td>
+        </tr>
+        <tr>
+            <td>ctrl p</td>
+            <td>hide / show the selection preview</td>
+        </tr>
+        <tr>
+            <td>ctrl enter (when initiating a table cell edit via the keyboard)</td>
+            <td>to edit a table cell in a long field editor</td>
+        </tr>
+        <tr>
+            <td>ctrl mouse click (when initiating a table cell edit via via the mouse)</td>
+            <td>to edit a table cell in a long field editor</td>
+        </tr>
+        <tr>
+            <td>delete key</td>
+            <td>delete the selected node in the tree</td>
+        </tr>
+    </tbody>
+</table>
+<b>Table short cut keys</b><br>
+<table border="0">
+    <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+<b>Tree short cut keys</b><br>
+<table border="0">
+    <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
