--- a/resources/html/help/Editing_Viewing/Adding a corpus branch.html
+++ b/resources/html/help/Editing_Viewing/Adding a corpus branch.html
@@ -1,50 +1,12 @@
 <!-- 
     Document   : 2. How do I create a Corpus?
     Created on : Mar 9, 2009, 1:31:31 PM
-    Author     : petwit
+    Author     : Peter.Withers@mpi.nl
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <STYLE TYPE="text/css">
-            <!--
-            .helpTitle
-            {
-                text-align: center;
-                font-size:125%;
-                background: #ede2cd;
-                margin:0;
-                padding:0;
-            }
-            .helpText
-            {
-                color:Black;
-                font-family:Arial,Helvetica,sans-serif;
-                font-size:100%;
-                font-size-adjust:none;
-                font-style:normal;
-                font-variant:normal;
-                font-weight:normal;
-                line-height:1.25em;
-                background: #F4F1EB;
-            }
-            -->
-        </STYLE>
-    </head>
-    <body class="helpText">
-        <table border="0" cellpadding="10" cellspacing="0">
-            <tr class="helpTitle"><td width="100%">Adding a corpus branch</td><td><img src="../../../icons/arbil32x32.png">
-            </td></tr>
-            <tr><td height="100%" colspan="2" class="helpText">
-                    A corpus branch can be created only in the 
-                    <img align="center" src="../../../icons/directory16x16.png"> 
-                    "Local Corpus" tree or within 
-                    another corpus branch in the "Local Corpus" tree.<br>
-                    By right clicking where you would like it to be and selecting 
-                    "Add/Corpus Branch" in the menu a new corpus branch will be created 
-                    and opened in a table ready for editing.<br>
-            </td></tr>
-        </table>
-    </body>
-</html>
+A corpus branch can be created only in the 
+<img align="center" src="../../icons/directory16x16.png"> 
+"Local Corpus" tree or within 
+another corpus branch in the "Local Corpus" tree.<br>
+By right clicking where you would like it to be and selecting 
+"Add/Corpus Branch" in the menu a new corpus branch will be created 
+and opened in a table ready for editing.<br>
