--- a/resources/html/help/Editing_Viewing/Adding a resource file to a session.html
+++ b/resources/html/help/Editing_Viewing/Adding a resource file to a session.html
@@ -1,51 +1,13 @@
 <!-- 
     Document   : How do I add a resource file to a session?
     Created on : Mar 9, 2009, 1:23:17 PM
-    Author     : petwit
+    Author     : Peter.Withers@mpi.nl
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <STYLE TYPE="text/css">
-            <!--
-            .helpTitle
-            {
-                text-align: center;
-                font-size:125%;
-                background: #ede2cd;
-                margin:0;
-                padding:0;
-            }
-            .helpText
-            {
-                color:Black;
-                font-family:Arial,Helvetica,sans-serif;
-                font-size:100%;
-                font-size-adjust:none;
-                font-style:normal;
-                font-variant:normal;
-                font-weight:normal;
-                line-height:1.25em;
-                background: #F4F1EB;
-            }
-            -->
-        </STYLE>
-    </head>
-    <body class="helpText">
-        <table border="0" cellpadding="10" cellspacing="0">
-            <tr class="helpTitle"><td width="100%">Adding a resource file to a session</td><td><img src="../../../icons/arbil32x32.png">
-            </td></tr>
-            <tr><td height="100%" colspan="2" class="helpText">
-                    You can either select the resource file from the "Working Directories" tree 
-                    and drag it into the desired session. Or you can add a resource via the menu
-                    "Add/WrittenResource" or "Add/MediaFile". However if you add via the menu rather 
-                    than dragging you will then need to manually edit the location of the resource.<br>
-                    <br>
-                    Only some file types are archivable and this is indicated by the icons in 
-                    the "Working Directories". If a file is not archivable then you will not be 
-                    able to drag it into a session.<br>
-            </td></tr>
-        </table>
-    </body>
-</html>
+You can either select the resource file from the "Working Directories" tree 
+and drag it into the desired session. Or you can add a resource via the menu
+"Add/WrittenResource" or "Add/MediaFile". However if you add via the menu rather 
+than dragging you will then need to manually edit the location of the resource.<br>
+<br>
+Only some file types are archivable and this is indicated by the icons in 
+the "Working Directories". If a file is not archivable then you will not be 
+able to drag it into a session.<br>
