--- a/resources/html/help/Editing_Viewing/Highlighting cells.html
+++ b/resources/html/help/Editing_Viewing/Highlighting cells.html
@@ -1,44 +1,7 @@
 <!-- 
     Document   : Highlighting cells
     Created on : Mar 13, 2009, 1:01:26 PM
-    Author     : petwit
+    Author     : Peter.Withers@mpi.nl
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <STYLE TYPE="text/css">
-            <!--
-            .helpTitle
-            {
-                text-align: center;
-                font-size:125%;
-                background: #ede2cd;
-                margin:0;
-                padding:0;
-            }
-            .helpText
-            {
-                color:Black;
-                font-family:Arial,Helvetica,sans-serif;
-                font-size:100%;
-                font-size-adjust:none;
-                font-style:normal;
-                font-variant:normal;
-                font-weight:normal;
-                line-height:1.25em;
-                background: #F4F1EB;
-            }
-            -->
-        </STYLE>
-    </head>
-    <body class="helpText">
-        <table border="0" cellpadding="10" cellspacing="0">
-            <tr class="helpTitle"><td width="100%">Highlighting cells</td><td><img src="../../../icons/arbil32x32.png">
-            </td></tr>
-            <tr><td height="100%" colspan="2" class="helpText">
-  
-            </td></tr>
-        </table>
-    </body>
-</html>
+Highlighting cells
+            
