Removed old log file and added version number to new log file names. Prevented dragging a parent node into one of its descendants in the tree. Conformed the message dialogs and removed the "?" icon that is likely to confuse users into clicking it. Added a title to the common message box. Modified add from favourites process to include sub nodes of the favourite. Added option to track the table selection in the trees. Added table menu item to jump to the current node in the tree. Caught errors better in the table cell editor. Added more details to the help files. Added a label to show how many columns are hidden in a table. Allowed the display of files in the preview but not directories.

--- a/resources/html/help/2. Quick Introduction.html
+++ b/resources/html/help/2. Quick Introduction.html
@@ -19,13 +19,13 @@ existing corpus branch.<br>
 The Local Corpus Tree contains local files that you can create or edit.
 It is here that any off line copies that you make can be accessed.<br>
 <br>
-Creating a new unattached corpus is done by selecting the "Local Corpus" 
-tree and via the menu selecting "add/corpus". Once this is done you can 
+Creating a new unattached corpus is done by selecting the "Local Corpus"
+tree and via the context menu (right-click) selecting "add/corpus". Once this is done you can 
 work within the newly created corpus adding new sessions etc..<br>
 <br>
 If you wish to start working in an existing corpus on of the servers you 
 will need to select the required branch in the "Remote Corpus" tree and make 
-an off line copy via the menu "Copy Branch to Offline Cache". The branch will 
+an off line copy via the context menu (right-click) "Copy Branch to Offline Cache". The branch will 
 then be copied into the "Local Corpus" tree. Once this is done you can work 
 within the "Local Corpus" tree adding new corpus branches or sessions, adding 
 resource files and adding new or editing existing metadata.<br>
