Removed old log file and added version number to new log file names. Prevented dragging a parent node into one of its descendants in the tree. Conformed the message dialogs and removed the "?" icon that is likely to confuse users into clicking it. Added a title to the common message box. Modified add from favourites process to include sub nodes of the favourite. Added option to track the table selection in the trees. Added table menu item to jump to the current node in the tree. Caught errors better in the table cell editor. Added more details to the help files. Added a label to show how many columns are hidden in a table. Allowed the display of files in the preview but not directories.

--- a/resources/html/help/Editing_Viewing/Adding a corpus branch.html
+++ b/resources/html/help/Editing_Viewing/Adding a corpus branch.html
@@ -8,5 +8,5 @@ A corpus branch can be created only in the
 "Local Corpus" tree or within 
 another corpus branch in the "Local Corpus" tree.<br>
 By right clicking where you would like it to be and selecting 
-"Add/Corpus Branch" in the menu a new corpus branch will be created 
+"Add/Corpus Branch" in the context menu (right-click) a new corpus branch will be created 
 and opened in a table ready for editing.<br>
