--- a/resources/html/help/Editing_Viewing/Adding a new session.html
+++ b/resources/html/help/Editing_Viewing/Adding a new session.html
@@ -8,5 +8,5 @@ A session can be created only within the
 tree or a <img align="center" src="../../icons/corpusnode_color.png"> 
 "corpus branch" within the "Local Corpus".<br>
 By right clicking the local corpus branch where you would like it to be added 
-and selecting "Add/Session" in the context menu a new session will be 
+and selecting "Add/Session" in the context menu (right-click) a new session will be 
 created and opened in a table ready for editing.<br>
