--- a/resources/html/help/Editing_Viewing/Column Views.html
+++ b/resources/html/help/Editing_Viewing/Column Views.html
@@ -6,7 +6,7 @@
 Column Views are used to select the columns that you want displayed in a table. 
 You can select the default view for new tables via the "Column Views" menu. 
 The current view on an existing table can be changed or edited then saved 
-via the context menu on the table header.<br>
+via the context menu (right-click) on the table header.<br>
 <br>
 When editing a Column View there are two sets of check boxes "Show Only" and "Hide". 
 "Show Only" will only show the selected columns which is useful if you are likely to 
