Removed old log file and added version number to new log file names. Prevented dragging a parent node into one of its descendants in the tree. Conformed the message dialogs and removed the "?" icon that is likely to confuse users into clicking it. Added a title to the common message box. Modified add from favourites process to include sub nodes of the favourite. Added option to track the table selection in the trees. Added table menu item to jump to the current node in the tree. Caught errors better in the table cell editor. Added more details to the help files. Added a label to show how many columns are hidden in a table. Allowed the display of files in the preview but not directories.

--- a/resources/html/help/Lamus/Uploading to the corpus server.html
+++ b/resources/html/help/Lamus/Uploading to the corpus server.html
@@ -7,7 +7,7 @@ In order to upload your changes to the corpus server you must
 first export to disk then upload via Lamus.<br>
 To export your new sessions and other changes, select the 
 modified nodes or a branch that contains them all and 
-via the mouse menu select export.
+via the context menu (right-click) select export.
 You will then be offered a location dialog to choose a 
 location on your computer to export the files to.<br>
 Lamus is then used to upload the exported files to the server. 
