Added help text.

--- a/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -26,6 +26,19 @@
             <td>ctrl p</td>
             <td>hide / show the selection preview</td>
         </tr>
+    </tbody>
+</table>
+<b>Table short cut keys</b><br>
+<table border="0">
+    <tbody>
+        <tr>
+            <td>delete key</td>
+            <td>delete the contents of the current table cell and start editing</td>
+        </tr>
+        <tr>
+            <td>Esc</td>
+            <td>Cancel editing the current cell</td>
+        </tr>
         <tr>
             <td>ctrl enter (when initiating a table cell edit via the keyboard)</td>
             <td>to edit a table cell in a long field editor</td>
@@ -33,23 +46,6 @@
         <tr>
             <td>ctrl mouse click (when initiating a table cell edit via via the mouse)</td>
             <td>to edit a table cell in a long field editor</td>
-        </tr>
-        <tr>
-            <td>delete key</td>
-            <td>delete the selected node in the tree</td>
-        </tr>
-    </tbody>
-</table>
-<b>Table short cut keys</b><br>
-<table border="0">
-    <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
         </tr>
         <tr>
             <td></td>
@@ -61,8 +57,8 @@
 <table border="0">
     <tbody>
         <tr>
-            <td></td>
-            <td></td>
+            <td>delete key</td>
+            <td>delete the selected node in the tree</td>
         </tr>
         <tr>
             <td></td>
