Added 'ctrl+shift w' to close all windows. Corrected icons when loading. Added actors language template. Updated help text.

--- a/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -11,6 +11,10 @@
             <td>Close top most window</td>
         </tr>
         <tr>
+            <td>ctrl+shift w</td>
+            <td>Close all windows</td>
+        </tr>
+        <tr>
             <td>ctrl tab</td>
             <td>next window</td>
         </tr>
