Updated the resource copy to handle local file sources. Updated the export to handle exporting local files. Made the table more robust when reloading. Prevented windows path name errors when adding resources. Prevented display of the intro help when location have been loaded. Prevented the loss of existing cache files due to a fresh download failing and overwriting the cache version. Manually set the look and feel. Prevented the imdi file contents being lost when the api fails to write the changes. Added UI components so the user can change the name of a key (currently limited by the api and will not save the changes made). Added all the links in the description fields the to the tree. Added the catalog files to the tree. Dissabled the context menu items {view xml, view xml formatted, export, check imdi format } for imdi child nodes. Corrected some help text.

--- a/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -48,7 +48,7 @@
             <td>to edit a table cell in a long field editor</td>
         </tr>
         <tr>
-            <td>ctrl mouse click (when initiating a table cell edit via via the mouse)</td>
+            <td>ctrl mouse click (when initiating a table cell edit via the mouse)</td>
             <td>to edit a table cell in a long field editor</td>
         </tr>
         <tr>
