Updated the add from favourites so that it is much more efficient when there are child nodes to add. Corrected an error with the loading of tempate components. Modified the adding from favourites to more correctly get the added nodes location. Corrected issue where the ctrl+w key opened the long field editor.

--- a/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -44,7 +44,7 @@
             <td>Cancel editing the current cell</td>
         </tr>
         <tr>
-            <td>ctrl enter (when initiating a table cell edit via the keyboard)</td>
+            <td>ctrl enter or ctrl space (when initiating a table cell edit via the keyboard)</td>
             <td>to edit a table cell in a long field editor</td>
         </tr>
         <tr>
