--- a/src/nl/mpi/arbil/ArbilTableAppletDemo.html
+++ b/src/nl/mpi/arbil/ArbilTableAppletDemo.html
@@ -10,11 +10,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/linorg/" 
+        <APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/linorg/"
                 CODE="nl.mpi.arbil.ArbilTableApplet.class"
-                ARCHIVE="arbil-0-3-16544.jar,lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/typecheck.jar,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar"
-                WIDTH=100% HEIGHT=100%>
+                ARCHIVE="arbil-0-4-16575.jar,lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/typecheck.jar,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar"
+                WIDTH=400 HEIGHT=200>
             <PARAM NAME="ImdiFileList" VALUE="http://corpus1.mpi.nl/IMDI/metadata/IMDI.imdi,http://corpus1.mpi.nl/qfs1/media-archive/Corpusstructure/MPI.imdi,http://corpus1.mpi.nl/qfs1/media-archive/dobes_data/ChintangPuma/Chintang/Conversation/Metadata/phidang_talk.imdi">
+            <PARAM NAME="ShowOnlyColumns" VALUE="Name,Description,Title"/>
+            <PARAM NAME="ChildNodeColumns" VALUE="Actors"/>
         </APPLET>
     </body>
 </html>
