--- a/src/nl/mpi/arbil/resources/html/help/Templates_and_Favourites/Favourites.html
+++ b/src/nl/mpi/arbil/resources/html/help/Templates_and_Favourites/Favourites.html
@@ -4,3 +4,7 @@
     Author     : Peter.Withers@mpi.nl
 -->
 Favourites<br>
+<!-- Favourites are used to add elements to a -->
+A Favourite can be created from any IMDI file even those already
+in the archive. This is done by selecting the desired node and adding it to
+Favourites via the context menu.
