--- a/src/nl/mpi/arbil/ArbilApplet-testing.html
+++ b/src/nl/mpi/arbil/ArbilApplet-testing.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/arbil/" CODE="nl.mpi.arbil.ArbilApplet.class" ARCHIVE="arbil-1-2-17484.jar,lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/typecheck-1.5.16185.jar,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar,lib/bcprov-jdk15-143.jar"
+    <APPLET CODEBASE="http://www.mpi.nl/tg/j2se/jnlp/arbil/" CODE="nl.mpi.arbil.ArbilApplet.class" ARCHIVE="arbil-1-3-17588.jar,lib/corpusstructure-1.6.1.jar,lib/imdiapi-1.0.6.jar,lib/log4j-1.2.14.jar,lib/saxon8.jar,lib/saxon8-dom.jar,lib/typecheck-1.5.16185.jar,lib/xalan-2.6.0.jar,lib/xercesImpl-2.9.0.jar,lib/bcprov-jdk15-143.jar,lib/slcshttps_jdk15_v0.2.jar"
         WIDTH=100% HEIGHT=100%>
 </APPLET>
   </body>
