--- a/src/nl/mpi/arbil/resources/html/help/Wizard.html
+++ b/src/nl/mpi/arbil/resources/html/help/Wizard.html
@@ -6,6 +6,8 @@
 This is a test wizard.<br>
 The input boxes will not do anything yet but could be used to fill in data that will go into the session that would be created for example: <input type="text" /><br>
 Adding nodes to the Tree root node can already be done, so try these links:<br>
+Title: <INPUT TYPE='text' name='arbilscript:set=.METATRANSCRIPT.Corpus.Title'><br>
+Description: <textarea cols="50" rows="5" name='arbilscript:set=.METATRANSCRIPT.Corpus.Description'/><br>
 <a href="arbilscript:add=.METATRANSCRIPT.Corpus&set=.METATRANSCRIPT.Corpus.Name:wizard created corpus node">create corpus</a><br>
 <a href="arbilscript:add=.METATRANSCRIPT.Session&set=.METATRANSCRIPT.Corpus.Name:wizard created corpus node">create session</a><br>
 Adding to a non root node cannot yet be done:<br>
