Modified the resource file copy to only change the file name if a file of the same name already exists and then only append a bracketed number. Added application font size adjustment for people with poor vision. Added short cut keys for the application font size (meta_- and meta_+ and meta_=).

--- a/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -30,6 +30,10 @@
             <td>ctrl p</td>
             <td>hide / show the selection preview</td>
         </tr>
+        <tr>
+            <td>ctrl -, +, =</td>
+            <td>adjust the application font size</td>
+        </tr>
     </tbody>
 </table>
 <b>Table short cut keys</b><br>
