Added help text for the table search shortcut keys.

--- a/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -56,6 +56,10 @@
             <td>to edit a table cell in a long field editor</td>
         </tr>
         <tr>
+            <td>ctrl f</td>
+            <td>to show the find replace panel of the table</td>
+        </tr>
+        <tr>
             <td></td>
             <td></td>
         </tr>
