Added long field editor shortcuts to help page

--- a/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
+++ b/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Short Cut Keys.html
@@ -76,6 +76,31 @@
             <td></td>
             <td></td>
         </tr>
+    </tbody>
+</table>
+<b>Long field editor keys</b><br>
+<table border="0">
+    <tbody>
+        <tr>
+            <td>ctrl up</td>
+            <td>go to previous field</td>
+        </tr>
+        <tr>
+            <td>ctrl down</td>
+            <td>go to next field</td>
+        </tr>
+        <tr>
+            <td>ctrl left</td>
+            <td>go to previous tab</td>
+        </tr>
+        <tr>
+            <td>ctrl right</td>
+            <td>go to next tab</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
         <tr>
             <td></td>
             <td></td>
