--- a/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Subnodes in a Table Cell.html
+++ b/src/nl/mpi/arbil/resources/html/help/Editing_Viewing/Subnodes in a Table Cell.html
@@ -3,7 +3,7 @@
     Created on : May 13, 2009, 2:43:33 PM
     Author     : Peter.Withers@mpi.nl
 -->
-When multiple nodes are displayed in the table, the sub nodes can also be displayed in a cable cell.
+When multiple nodes are displayed in the table, the sub nodes can also be displayed in a table cell.
 To do this, select the relevant row in the table and via the context menu (right-click) 
 select the "Show Child Nodes" option. Once one of the available child node types is 
 selected that child type will be added as a column in the table.
