Arbil data nodes shown in wicket data table!

--- a/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -3,7 +3,8 @@
         <title>Wicket Arbil test</title>
     </head>
     <body>
-        <br/><br/>
+	<p>Start</p>
 	<table wicket:id="datatable"></table>
+	<p>End</p>
     </body>
 </html>
