--- a/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -1,10 +1,13 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
     <head>  
-        <title>Wicket Arbil test</title>
+        <title>Arbil wicket test</title>
     </head>
     <body>
-	<p>Start</p>
-	<table wicket:id="datatable"></table>
-	<p>End</p>
-    </body>
+	<h1>Arbil wicket test</h1>
+	<table wicket:id="datatable">
+	</table>
+	<wicket:fragment wicket:id="iconFragment">
+	    <img wicket:id="nodeIcon"/>
+	</wicket:fragment>
+</body>
 </html>
