NodesPanel (preparing for wicket push)

--- a/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -4,10 +4,9 @@
     </head>
     <body>
 	<h1>Arbil wicket test</h1>
-	<table wicket:id="datatable">
-	</table>
-	<wicket:fragment wicket:id="iconFragment">
-	    <img wicket:id="nodeIcon"/>
-	</wicket:fragment>
+	<div wicket:id="nodespanel">
+	    
+	</div>
+
 </body>
 </html>
