HomePage: interaction between tree and table. If node is selected, table is shown for that node

--- a/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -4,9 +4,17 @@
     </head>
     <body>
 	<h1>Arbil wicket test</h1>
-	<div wicket:id="testcomponent">
+
+
+	<div wicket:id="tree" style="float: left;">
 
 	</div>
 
+	<div wicket:id="mainContainer">
+
+	    <div wicket:id="tablePanel">
+	    </div>
+
+	</div>
     </body>
 </html>
