In sorting the tree(model), wait for nodes to finish loading (doing async anyway)

--- a/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/java/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -6,7 +6,7 @@
 	<h1>Arbil wicket test</h1>
 
 
-	<div wicket:id="tree" style="float: left;">
+	<div wicket:id="tree" style="float: left; height:450px; overflow: auto; overflow-x:hidden;">
 
 	</div>
 
