Markup and style of Arbil tables

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -5,16 +5,17 @@
     <body>
 	<h1>Arbil wicket test</h1>
 
+	<div>
+	    <div wicket:id="tree" style="float: left; height:450px; overflow: auto; overflow-x:hidden;">
 
-	<div wicket:id="tree" style="float: left; height:450px; overflow: auto; overflow-x:hidden;">
-
-	</div>
-
-	<div wicket:id="mainContainer">
-
-	    <div wicket:id="tablePanel">
 	    </div>
 
+	    <div wicket:id="mainContainer">
+
+		<div wicket:id="tablePanel">
+		</div>
+
+	    </div>
 	</div>
     </body>
 </html>
