Created branch for test with ArbilFieldsNode interface

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -27,6 +27,8 @@
 		Field: <input type="text" wicket:id="searchFieldName" />
 		Value: <input type="text" wicket:id="searchString" />
 	    <input type="submit" value="Search" wicket:id="searchSubmit" />
+
+	    <div wicket:id="progress">[progress]</div>
 	</form>
 
 	<div wicket:id="tablePanel">
