Added progress bar & stop button to SearchForm

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -27,6 +27,7 @@
 		Field: <input type="text" wicket:id="searchFieldName" />
 		Value: <input type="text" wicket:id="searchString" />
 	    <input type="submit" value="Search" wicket:id="searchSubmit" />
+	    <input type="submit" value="Stop" wicket:id="searchStop" />
 
 	    <div wicket:id="progress">[progress]</div>
 	</form>
