ArbilWicketSearchForm: NodeSearchTerms can be added and removed

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -22,13 +22,26 @@
 	    <p><span wicket:id="searchNodes">NODES</span></p>
 	    <input type="text" wicket:id="remoteSearchTerm" /><br />
 
-	    <div wicket:id="nodeSearchTerms">
+	    <div wicket:id="nodeSearchTermsContainer">
 
-		<select wicket:id="nodeType">
-		    <option>All</option>
-		</select>
+		<div wicket:id="nodeSearchTerms">
+
+		    <div class="nodeSearchTerm">
+
+			<select wicket:id="nodeType">
+			    <option>All</option>
+			</select>
+
 		Field: <input type="text" wicket:id="searchFieldName" />
 		Value: <input type="text" wicket:id="searchString" />
+			<input type="submit" value="Remove" wicket:id="removeNodeSearchTerm" />
+
+		    </div>
+
+		</div>
+
+		<input type="submit" value="Add term" wicket:id="addNodeSearchTerm" />
+
 	    </div>
 	    <input type="submit" value="Search" wicket:id="searchSubmit" />
 	    <input type="submit" value="Stop" wicket:id="searchStop" />
