Added dropdowns for And/Or and Has/HasNot on SearchForm
Split add component methods in SearchForm

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -28,6 +28,14 @@
 
 		    <div class="nodeSearchTerm">
 
+			<select wicket:id="booleanAnd">
+			    <option>AND</option>
+			</select>
+
+			<select wicket:id="notEqual">
+			    <option>Has</option>
+			</select>
+
 			<select wicket:id="nodeType">
 			    <option>All</option>
 			</select>
