Wrapped remote search term input in a container that gets hidden/shown depending on whether search is remote. Added text to this. SearchForm won't perform remote search if search term is not filled out

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -20,7 +20,10 @@
 	<h2>Search</h2>
 	<form wicket:id="searchForm">
 	    <p><span wicket:id="searchNodes">NODES</span></p>
-	    <input type="text" wicket:id="remoteSearchTerm" /><br />
+	    <div wicket:id="remoteSearchTermContainer">
+		Remote search term:
+		<input type="text" wicket:id="remoteSearchTerm" /> (required)
+	    </div>
 
 	    <div wicket:id="nodeSearchTermsContainer">
 
