Added 'doSearch' option to NodeSearchPage, which initiates the search upon request and hides the form (unless 'showForm' is included). Also renamed Pages.css to TreePage.css and removed css link from NodeSearchPage.html so that it doesn't mimic the TreePage layout anymore (it didn't make sense)

--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/HomePage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/HomePage.html
@@ -2,7 +2,7 @@
     <head>  
         <title>Arbil wicket test</title>
     <wicket:link>
-	<link rel="stylesheet" type="text/css" href="Pages.css"/>
+	<link rel="stylesheet" type="text/css" href="TreePage.css"/>
     </wicket:link>
 </head>
 <body>
