--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/NodeSearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/NodeSearchPage.html
@@ -1,18 +1,11 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
     <head>  
         <title>Arbil wicket test</title>
-    <wicket:link>
-	<link rel="stylesheet" type="text/css" href="Pages.css"/>
-    </wicket:link>
+<!--    <wicket:link>
+	<link rel="stylesheet" type="text/css" href="TreePage.css"/>
+    </wicket:link>-->
 </head>
 <body>
-    <h1>Arbil wicket test: search</h1>
-
-<wicket:link>
-    <a href="HomePage.html">Home</a> |     
-    <a href="SearchPage.html">Search</a>
-</wicket:link>
-
 
 <div id="tableContainer" wicket:id="tableContainer">
 
