--- a/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
+++ b/arbil-wicket/src/main/resources/nl/mpi/arbil/wicket/pages/SearchPage.html
@@ -2,7 +2,7 @@
     <head>  
         <title>Arbil wicket test</title>
     <wicket:link>
-	<link rel="stylesheet" type="text/css" href="Pages.css"/>
+	<link rel="stylesheet" type="text/css" href="TreePage.css"/>
     </wicket:link>
 </head>
 <body>
