Added icon for datacontainer. Also added this icon and CMDI metadata icon to help page on icons

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/help/Editing_Viewing/Icons.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/help/Editing_Viewing/Icons.html
@@ -14,8 +14,10 @@ They are as follows:<br>
     <tr><td><img align="center" src="../../icons/remote.png"></td><td>The file is on a remote server (read only)<td></td>
     <tr><td><img align="center" src="../../icons/corpusnode_color.png"></td><td>Corpus branch<td></td>
     <tr><td><img align="center" src="../../icons/session_color.png"></td><td>IMDI Session<td></td>
-    <tr><td><img align="center" src="../../icons/data.png"></td><td>IMDI component that contains data<td></td>
-    <tr><td><img align="center" src="../../icons/dataempty.png"></td><td>IMDI component that has no data<td></td>
+    <tr><td><img align="center" src="../../icons/clarinE.png"></td><td>CMDI metadata file<td></td>
+    <tr><td><img align="center" src="../../icons/data.png"></td><td>Metadata component that contains data<td></td>
+    <tr><td><img align="center" src="../../icons/dataempty.png"></td><td>Metadata component that has no data<td></td>
+    <tr><td><img align="center" src="../../icons/datacontainer.png"></td><td>Node that groups metadata components of the same type<td></td>
     <tr><td><img align="center" src="../../icons/writtenresource.png"></td><td>Written resource<td></td>
     <tr><td><img align="center" src="../../icons/video.png"></td><td>Video resource<td></td>
     <tr><td><img align="center" src="../../icons/audio.png"></td><td>Audio resource<td></td>
