Moved setup wizard classes to wizard.setup package. Added MetadataFormatSelectContent class and abstract TextInstructionWizardContent class which is now also extended by introduction content class. Added callbacks onNext and onPrevious on wizardContent  (refs #1026)

--- a/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
+++ b/arbil/src/main/resources/nl/mpi/arbil/resources/html/wizard/MetadataFormatSelect.html
@@ -3,5 +3,4 @@ To change this template, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<p>Welcome to Arbil, the Archive Builder</p>
-<p>Some more text here...</p>
+<p>Select metadata format</p>
