--- a/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction.html
+++ b/src/main/resources/nl/mpi/arbil/resources/html/wizard/Introduction.html
@@ -1,7 +1,9 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<p>Welcome to Arbil, the Archive Builder</p>
-<p>Some more text here...</p>
+<h1>
+    Welcome to Arbil!
+</h1>
+<p>
+    This wizard will help you with the initial setup of Arbil based<br/>
+    on the way you plan to use Arbil. Press <strong>Next</strong> to<br />
+    go to the first step of the wizard.
+</p>
